Add a comment for minimum required changes in template.env Fixes #12

--- a/template.env
+++ b/template.env
@@ -1,16 +1,21 @@
+# Required
 TenantID="yourtenant.onmicrosoft.com"
 SubscriptionID="yoursubscriptionid"
-AppRegistrationName="Intune Device Classification"
-CertifcateName="Intune Device Classification Certificate"
-PubCertifcateFileName="IntuneDeviceClassificationCert.cer"
-PrivCertifcateFileName="IntuneDeviceClassificationCert.pfx"
+
+# Recommended
+ExtensionAttribute="extensionAttribute13"
+DeviceClassificationList="CAD,Kiosk,Special Device,clear"
 AutomationAccountName="aa-intunedeviceclassification"
 ResourceGroupName="rg-deviceclassification"
 Location="eastus"
+AppRegistrationName="Intune Device Classification"
+
+# Optional
+CertifcateName="Intune Device Classification Certificate"
+PubCertifcateFileName="IntuneDeviceClassificationCert.cer"
+PrivCertifcateFileName="IntuneDeviceClassificationCert.pfx"
 Plan="Basic"
 ClearValue="clear"
-DeviceClassificationList="CAD,Kiosk,Special Device,clear"
-ExtensionAttribute="extensionAttribute13"
 RemediationScriptName="Device Classification"
 RemediationScriptPublisher="MrWyss-MSFT"
 AppConnectionName="AzureAppConnection"
