Fix certificate file name typo

--- a/template.env
+++ b/template.env
@@ -12,8 +12,8 @@ AppRegistrationName="Intune Device Classification"
 
 # Optional
 CertifcateName="Intune Device Classification Certificate"
-PubCertifcateFileName="IntuneDeviceClassificationCert.cer"
-PrivCertifcateFileName="IntuneDeviceClassificationCert.pfx"
+PubCertificateFileName="IntuneDeviceClassificationCert.cer"
+PrivCertificateFileName="IntuneDeviceClassificationCert.pfx"
 Plan="Basic"
 ClearValue="clear"
 RemediationScriptName="Device Classification"
