Add ClearValue as default to DeviceClassificationList in the Runbook Script Fixes #17

--- a/template.env
+++ b/template.env
@@ -4,7 +4,7 @@ SubscriptionID="yoursubscriptionid"
 
 # Recommended
 ExtensionAttribute="extensionAttribute13"
-DeviceClassificationList="CAD,Kiosk,Special Device,clear"
+DeviceClassificationList="CAD,Kiosk,Special Device"
 AutomationAccountName="aa-intunedeviceclassification"
 ResourceGroupName="rg-deviceclassification"
 Location="eastus"
