App Connection Name should not be changed Fixes #21

--- a/template.env
+++ b/template.env
@@ -18,6 +18,8 @@ Plan="Basic"
 ClearValue="clear"
 RemediationScriptName="Device Classification"
 RemediationScriptPublisher="MrWyss-MSFT"
-AppConnectionName="AzureAppConnection"
 RunBookName="rb_intunedeviceclassification"
 DailyScheduleTime="23:00"
+
+# Danger Zone
+AppConnectionName="AzureAppConnection"
